[package]
name = "maq"
version = "0.1.0"
authors = ["ftilde <ftilde@protonmail.com>"]
edition = "2018"
description = "maildir-address-query: Collect and query mail addresses from maildirs"
license = "MIT"

#[profile.release]
#debug = true #for profiling

[dependencies]
mailparse = "0.10"
walkdir = "2.3"
structopt = "0.3"
bstr = "0.2"
fuzzy-matcher = "0.3"
